--- a/learnCode/package.json
+++ b/learnCode/package.json
@@ -7,9 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.3"
-  }
+  "license": "ISC"
 }
