--- a/PianoProject/export_presets.cfg
+++ b/PianoProject/export_presets.cfg
@@ -1,20 +1,20 @@
 [preset.0]
 
-name="Pee Project"
+name="Web"
 platform="Web"
-runnable=false
-advanced_options=true
+runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="*.txt, *.json"
+include_filter="*.txt"
 exclude_filter=""
 export_path="PianoProjectHTML/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=1
+script_export_mode=2
 
 [preset.0.options]
 
